PR comment fixes